# cookiecutter-cliffapp-template

./: .gitignore  LICENSE-2.0.txt  Makefile  README.rst  __about__.py  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: .gitignore  Makefile  conf.py  development-lifecycle.rst  index.rst  introduction.rst  license.rst  usage.rst
hooks/: post_gen_project.py
tests/: 00_usage.bats  20_baking.bats  cookiecutter-test-defaults.yaml  test_bake_project.py  test_helper.bash
{{cookiecutter.project_name}}/: .gitignore  AUTHORS.rst  LICENSE.txt  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: test-build-publish.yml
{{cookiecutter.project_name}}/docs/: .gitignore  Makefile  conf.py  credits.rst  development-lifecycle.rst  index.rst  introduction.rst  license.txt  usage.rst
{{cookiecutter.project_name}}/tests/: 00_help.bats  test_helper.bash  test_{{cookiecutter.project_slug}}-example.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  about.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: __init__.py
{{cookiecutter.project_slug}}/: Makefile  README.rst  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  development-lifecycle.rst  index.rst  introduction.rst  usage.rst
{{cookiecutter.project_slug}}/tests/: 00_help.bats  test_placeholder.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  about.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: __init__.py
