[tool.poetry]
name = "cookiecutter-cliffapp-python"
version = "2021.3.0"
description = "Cookitcutter template for Python CLI app using the ``cliff`` framework"
authors = ["Dave Dittrich <dave.dittrich@gmail.com>"]
readme = "README.md"
license = "Apache Software License 2.0"
packages = [{include = "mycliffapp"}]

[tool.poetry.dependencies]
python = ">=3.9"
watchdog = "^3.0.0"
cookiecutter = "^2.1.1"
cliff = "^4.3.0"
python-secrets = "^23.4.2"
sphinx = "^7.0.1"

[tool.poetry.group.dev.dependencies]
tox-conda = "^0.10.2"
bandit = "^1.7.5"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cookies = "^0.7.0"
setuptools-scm = "^7.1.0"
setuptools = "^67.8.0"
twine = "^4.0.2"
gitpython = "^3.1.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
