[bumpversion]
current_version = 2021.3.0
commit = False
tag = False

[bumpversion:file:VERSION]

[bumpversion:file:README.rst]

[bumpversion:file:__about__.py]

[bdist_wheel]
universal = 1

[metadata]
name = cookiecutter-cliffapp-template
description = Cookitcutter template for Python CLI app using the Cliff framework
description_file = README.rst
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/cookietcutter-cliffapp-template/tarball/master
url = https://github.com/davedittrich/cookiecutter-cliffapp-template
python_requires = >=3.6
license = Apache Software License
keywords =
    cookiecutter
    template
    cliff
    cli
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Installation/Setup
    Topic :: Utilities

