# [1-setup.cfg]
[bumpversion]
current_version = 2021.3.0
commit = False
tag = False

[bumpversion:file:README.rst]

[bumpversion:file:VERSION]

[bumpversion:file:__about__.py]

[bumpversion:file:docs/conf.py]
# ! [1-setup.cfg]

[bdist_wheel]
universal = 1

[metadata]
name = cookiecutter-cliffapp-template
description = Cookitcutter template for Python CLI app using the ``cliff`` framework
description_file = README.rst
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/cookietcutter-cliffapp-template/tarball/master
url = https://github.com/davedittrich/cookiecutter-cliffapp-template
python_requires = >=3.9
license = Apache Software License 2.0
keywords =
    cookiecutter
    template
    cliff
    cli
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Installation/Setup
    Topic :: Utilities

