[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
license = "{{cookiecutter.license}}"
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
