[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]
readme = "README.rst"
license = "{{cookiecutter.license}}"
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = ">=3.9"
cliff = "^4.3.0"
python-secrets = "^23.4.2"
setuptools-scm = "^7.1.0"
sphinx = "^7.0.1"

[tool.poetry.group.dev.dependencies]
tox-conda = "^0.10.2"
bandit = "^1.7.5"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cookies = "^0.7.0"
setuptools = "^67.8.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
