# -*- coding: utf-8 -*-
# [1-setup.cfg]
[bumpversion]
current_version = {{cookiecutter.project_version}}
commit = False
tag = False

[bumpversion:file:README.rst]

[bumpversion:file:VERSION]

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]

[bumpversion:file:docs/conf.py]
# ![1-setup.cfg]

[bdist_wheel]
universal = 1

[flake8]
ignore = F403,F405,W503
max-line-length = 80
exclude = tests/*
max-complexity = 10


{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Other/Proprietary License': 'License :: Other/Proprietary License'
} %}

[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.project_short_description}}
description_file = README.rst
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
download_url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/tarball/main
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
python_requires = >=3.6
license = {{cookiecutter.license}}
keywords =
    {{cookiecutter.project_slug}}
{%- if cookiecutter.project_slug != cookiecutter.project_name %}
    {{cookiecutter.project_name}}
{%- endif %}
    cliff

# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
{%- if cookiecutter.license in license_classifiers %}
    {{ license_classifiers[cookiecutter.license] }}
{%- endif %}
{%- if cookiecutter.license == 'Other/Proprietary License' %}
    Private :: Do Not Upload'
{%- endif %}
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
scripts =
    bin/{{cookiecutter.project_slug}}

[options.entry_points]
console_scripts =
    {{cookiecutter.project_name}} = {{cookiecutter.project_slug}}.__main__:main
{{cookiecutter.project_slug}} =
    about = {{cookiecutter.project_slug}}.about:About

# vim: set ts=4 sw=4 tw=0 et :
